# hexthing-gfxrs

./: Cargo.toml
hexthing/: Cargo.toml
hexthing/src/: definitions.rs  main.rs  renderable_definition.rs  vertex.rs
hexthing/src/rendering/: adapter_state.rs  backend_state.rs  buffer_state.rs  descriptor_set.rs  device_state.rs  framebuffer_state.rs  mod.rs  pipeline_state.rs  render_pass_state.rs  renderer_state.rs  swapchain_state.rs  uniform.rs
hexthing/src/shaders/: hex.frag  hex.vert
src/: main.rs
src/shaders/: hex.vert
